--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,44 +1,74 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+<div class="row">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-6" style="margin-top: 60px;">
+    <center><h3>개인정보 수정</h3></center>
+    
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
+      <div class="row" style="margin-top: 30px;">
+        <div class="col-lg-6">
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, class: "form-control", :disabled => true %>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="field">
+            <%= f.label :nickname %><br />
+            <%= f.text_field :nickname, class: "form-control",  autofocus: true %>
+          </div>
+        </div>
+      </div><br>
+      
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
+    
+      <div class="field">
+        <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, class: "form-control", autocomplete: "off" %>
+      </div><br>
+    
+      <div class="field">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "off" %>
+      </div><br>
+    
+      <div class="field">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, class: "form-control", autocomplete: "off" %>
+      </div><br>
+      
+      <div class="field">
+        <%= f.label :phone_number %><br />
+        <%= f.text_field :phone_number, autocomplete: "off", class: "form-control" %>
+      </div><br>
+      
+      <div class="field">
+        <%= f.label :living_region %><br />
+          <%= f.select :living_region, options_for_select(["Select One", "서울/경기", "인천", "충청도", "경상도", "전라도", "강원도", "제주도"],:disabled => ["Select One"]), class: "form-control" %>
+      </div><br>
+      
+    
+      
+      <!--프로필사진-->
+      <div class="field">
+        <%= f.label :image %><br />
+        <%= f.file_field :image %>
+      </div><br>
+        
+      <center><div class="actions">
+        <%= f.submit "수정완료", class: "btn  btn-default" %>
+      </div></center>
+    <% end %>
+      
+    
+    <br><br><center>
+      <div style="width:100%; height: 150px; border: 1px #8C8C8C solid; border-radius: 15px;">
+        <h3>회원탈퇴</h3><br>
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      </div>
+    </center>  
   </div>
-  
-  <div class="field">
-    <%= f.label :nickname %><br />
-    <%= f.text_field :nickname, autofocus: true %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+  <div class="col-lg-3"></div>
+</div><br><br>
