--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -5,12 +5,24 @@ $(".alert").addClass("in").fadeOut(4500);
 $('[data-toggle=collapse]').click(function(){
   	// toggle icon
   	$(this).find("i").toggleClass("glyphicon-chevron-down");
-});
+}); 
 </script>
+
+<script>
+  $(function() {
+    document.getElementById('over_convert').innerHTML='<div class="convert2" id="convert2" style="box-shadow: inset 0px 0px 10px #8C8C8C;"><div class="nav_icon_review" id="review_menu" style="cursor:pointer;"><img src="https://cdn0.iconfinder.com/data/icons/layout-and-location/24/Untitled-2-21-24.png"><p style="padding-top: 5px; font-size:12px;"><b>REVIEW</b></p></div></div>'
+  });
+</script>
+
+<div class="review_drawer" id="review_drawer">
+</div>
+
+<script>
+</script>
+
 <br><br>
 <div class="row" style="padding-top:20px;">
   <div class="col-md-2 col-md-offset-2">
-    <a href="#"><strong><i class="glyphicon glyphicon-home"></i>&nbsp;후기</strong></a><br>
       <ul class="nav nav-stacked">
           <li role="nav-header"><a href="/home/labreview">전체보기</a></li>
           <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">서울/경기 <i class="glyphicon glyphicon-chevron-right"></i></a>
@@ -97,38 +109,20 @@ $('[data-toggle=collapse]').click(function(){
   <!--메인페이지인 경우-->
   <%if params[:id].nil?%>
     <div class="col-md-6">
+      <p>전국 핫플레이스</p>
       <div class="row">
+        <%@testcenter.sort{|x| x.review_point}.reverse.take(3).reverse.each do |y|%>
         <div class="col-md-4">
           <div class="thumbnail">
             <img src="..." alt="...">
             <div class="caption">
               <h4>1위</h4>
-              <p>...</p>
-              <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.review_point%></p>
             </div>
           </div>
         </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4>2위</h4>
-              <p>...</p>
-              <p><a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4>3위</h4>
-              <p>...</p>
-              <p><a href="#" class="btn btn-default" role="button">Button</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2"></div>
+        <%end%>
       </div>  
       
       <div class="row"> 
@@ -208,7 +202,7 @@ $('[data-toggle=collapse]').click(function(){
           </table>
         </div>
         <form action="/home/labreview_write">
-            <button type="submit" class="btn btn-primary">후기 작성</button>
+            <button type="submit" class="btn btn-default">후기 작성</button>
         </form>
     </div>
     
@@ -218,8 +212,56 @@ $('[data-toggle=collapse]').click(function(){
 <!--각 학교별 페이지인경우-->
 <%else%>
   <div class="col-md-6">
-    <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
+    <div class="row">
+      <%if params[:id] != nil && (@testcenter.where(:region_code=>"01").include? @testcenter.find(params[:id])) %>
+          <p>서울/경기 핫 플레이스</p>
+          <%@testcenter.where(:region_code => "01").sort{|x| x.review_point}.reverse.take(3).reverse.each do |y|%>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>1위</h4>
+                <p><%=y.name%></p>
+                <p>평점:<%=y.review_point%></p>
+                <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <%end%>
+      <%elsif params[:id] != nil && (@testcenter.where(:region_code=>"02").include? @testcenter.find(params[:id])) %>
+          <p>인천 핫 플레이스</p>
+          <%@testcenter.where(:region_code => "02").sort{|x| x.review_point}.reverse.take(3).reverse.each do |y|%>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>1위</h4>
+                <p><%=y.name%></p>
+                <p>평점:<%=y.review_point%></p>
+                <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <%end%>
+      <%elsif params[:id] != nil && (@testcenter.where(:region_code=>"03").include? @testcenter.find(params[:id])) %>
+          <p>충청도 핫 플레이스</p>
+          <%@testcenter.where(:region_code => "03").sort{|x| x.review_point}.reverse.take(3).reverse.each do |y|%>
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <img src="..." alt="...">
+              <div class="caption">
+                <h4>1위</h4>
+                <p><%=y.name%></p>
+                <p>평점:<%=y.review_point%></p>
+                <p><a href="#" class="btn btn-default" role="button">Button</a></p>
+              </div>
+            </div>
+          </div>
+          <%end%>
+      <%end%>
+    </div> 
     
+    <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
     <div class="panel panel-default">
         <!-- Table -->
         <table class="table table-striped table-condensed">
@@ -242,8 +284,8 @@ $('[data-toggle=collapse]').click(function(){
           <tbody>
             <% @testcenter.find(params[:id]).articles.reverse.each do |x|%>
             <tr data-toggle="modal" data-target="#<%=x.id%>">
-                <td style="text-align:center"><%=x.id%></td>
-                <td style="text-align:center"><%=x.testcenter%></td>
+                <td style="text-align:center;cursor:pointer"><%=x.id%></td>
+                <td style="text-align:center;cursor:pointer"><%=x.testcenter%></td>
                 <td style="text-align:center"><%=x.title%></td>
                 <td style="text-align:center">김새봄</td>
                 <td style="text-align:center">100</td>
