--- a/app/views/home/mypage.erb
+++ b/app/views/home/mypage.erb
@@ -1,52 +1,81 @@
-
-  <div class="mypage">
-    <div>
-      <form>
-        <fieldset disabled>
-          <div class="form-group" style="width: 60%; margin-top: 80px">
-            <label for="disabledTextInput">Email address</label>
-            <center>
-              <input type="text" id="disabledTextInput" class="form-control" value="<%= current_user.email %>">
-            </center>
-          </div>
-        </fieldset> 
-      </form>
-      <center>
-      <div style="width: 60%; height: 200px; margin-top: 200px;">
-          <label>시험목록</label>
-          <!-- Table -->
-            <table class="table" style="border:1px solid #D5D5D5; border-radius: 25px;">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>시험일</th>
-                <th>시험장</th>
-                <th>점수</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-              </tr>
-            </tbody>
-            </table>
-          
-      </div>
-    </center>
-    </div>  
+<div class="row">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-6">
+    <div class="row">
+      <div class="col-lg-6">
+        <form>
+          <fieldset disabled>
+            <div class="form-group" style="width: 100%; margin-top: 100px;">
+              <label for="disabledTextInput">Email address</label>
+                <input type="text" id="disabledTextInput" class="form-control" value="<%= current_user.email %>">
+            </div>  
+          </fieldset> 
+        </form>
+      </div>  
+      <div class="col-lg-6">
+        <form>
+          <fieldset disabled>
+            <div class="form-group" style="width: 100%; margin-top: 100px;">
+              <label for="disabledTextInput">Nickname</label>
+                <input type="text" id="disabledTextInput" class="form-control" value="<%= current_user.nickname %>">
+            </div>
+          </fieldset> 
+        </form>
+      </div>  
+    </div>
+    <form>
+      <fieldset disabled>
+        <div class="form-group" style="width: 100%;">
+          <label for="disabledTextInput">Phone Number</label>
+            <input type="text" id="disabledTextInput" class="form-control" value="<%= current_user.phone_number %>">
+        </div>
+      </fieldset> 
+    </form>
+    <form>
+      <fieldset disabled>
+        <div class="form-group" style="width: 100%;">
+          <label for="disabledTextInput">Address</label>
+            <input type="text" id="disabledTextInput" class="form-control" value="<%= current_user.living_region %>">
+        </div>
+      </fieldset> 
+    </form>
+    <div style="width: 100%; height: 200px; margin-top: 100px;">
+        <label>시험목록</label>
+        <!-- Table -->
+          <table class="table" style="border:1px solid #D5D5D5; border-radius: 25px;">
+          <thead>
+            <tr>
+              <th>#</th>
+              <th style="width:30px;">시험일자</th>
+              <th>시험장</th>
+              <th>점수</th>
+              <th><b>+</b></th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td>@mdo</td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td>@fat</td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td>@twitter</td>
+            </tr>
+          </tbody>
+          </table>
+    
+    <center><a href="/users/edit"><button class="btn  btn-default">개인정보 수정하기</button></a></center>
+    </div>
   </div>
+  <div class="col-lg-3"></div>
+</div>  
