--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,8 +5,12 @@
   var labmarkers = [];
   var current_marker;
   var pos;
-  var ori;
-  var des;
+  var ori_G;
+  var ori_K;
+  var des_G;
+  var des_K;
+  var directionsDisplay;
+  var directionsService = new google.maps.DirectionsService();
 </script>
 
 <script>//현재위치 아이콘 변수 만들기
@@ -47,6 +51,7 @@
 
 <script>//초기 지도 부르기
   function initMap() {
+    directionsDisplay = new google.maps.DirectionsRenderer();
     mapProp = {
       center: defaultCenter,
       zoom: 14,
@@ -54,6 +59,7 @@
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
     map = new google.maps.Map(document.getElementById('map'), mapProp);
+    directionsDisplay.setMap(map);
     
    if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
@@ -81,6 +87,7 @@
           icon: img,
           animation: google.maps.Animation.BOUNCE
         });
+        markerclick(current_marker);
         addinfocurrent(current_marker, '현재 위치');
       }, function() {
         handleLocationError(true, infoWindow, map.getCenter());
@@ -91,7 +98,7 @@
         
     
     for (i=0; i<lab_data.length; i++) {
-      addinfoclick(labmarkers[i]);
+      markerclick(labmarkers[i]);
       addinfoinout(labmarkers[i], 
                    '<p style="font-size:25px;"><b>'+lab_data[i][0]+'</b></p>'
                     +'<p>'+lab_data[i][1]+'</p>'
@@ -105,6 +112,37 @@
     };
     
   } //initMap
+</script>
+
+<script>//길찾기
+  function calcRoute() {
+    //directionsDisplay = new google.maps.DirectionsRenderer();
+    //directionsDisplay.setMap(map);
+    var start = document.getElementById("hidden_start").value;
+    var end = document.getElementById("hidden_end").value;
+    var request = {
+      origin:start,
+      destination:end,
+      travelMode: google.maps.TravelMode.TRANSIT
+    };
+    directionsService.route(request, function(result, status) {
+      if (status == google.maps.DirectionsStatus.OK) {
+        directionsDisplay.setDirections(result);
+      }
+    });
+  }
+</script>
+
+<script>//루트 지우기
+  function deleteRoute() {
+    directionsDisplay.setMap(null);
+    $(function() {
+      $('#start').val('');
+      $('#hidden_start').val('');
+      $('#end').val('');
+      $('#hidden_end').val('');
+    });
+  }
 </script>
 
 <script>//지도 중심좌표 및 줌 변경
@@ -121,6 +159,7 @@
         map: map,
         position: lab_data[i][2],
         title: lab_data[i][0],
+        address: lab_data[i][1],
         icon: 'map_marker32.png',
         animation: google.maps.Animation.DROP
       }));
@@ -129,18 +168,28 @@
 </script>
 
 <script>
-  function addinfoclick(marker) {
+  function markerclick(marker) {
     marker.addListener('click', function() {
+      var title = marker.title;
       var ex = marker.position;
-      ori = String(ex.G)+','+String(ex.K);
-      console.log(ori);
+      ori_G = ex.G;
+      ori_K = ex.K;
+      $(function() {
+        $('#start').val(title);
+        $('#hidden_start').val(ex);
+      });
     });
     marker.addListener('rightclick', function() {
+      var title = marker.title;
       var ex = marker.position;
-      des = String(ex.G)+','+String(ex.K);
-      console.log(des);
+      des_G = ex.G;
+      des_K = ex.K;
+      $(function() {
+        $('#end').val(title);
+        $('#hidden_end').val(ex);
+      });
     });
-  } //addinfoclick
+  } //markerclick
 </script>
 
 
@@ -155,7 +204,7 @@
     marker.addListener('mouseout', function() {
         setTimeout(function() {
           info.close();
-        }, 1700);
+        }, 1600);
     });
   }
 </script>
@@ -291,6 +340,7 @@
     $('#near_by').click(function() {
       $('#near_list').toggle('slide',200);
       $('#lab_list').hide();
+      $('#direction_input').hide();
     });
   });
 </script>
@@ -299,6 +349,16 @@
     $('#lab_list_button').click(function() {
       $('#lab_list').toggle('slide',200);
       $('#near_list').hide();
+      $('#direction_input').hide();
+    });
+  });
+</script>
+<script>
+  $(function() {
+    $('#directions').click(function() {
+      $('#direction_input').toggle('slide',200);
+      $('#near_list').hide();
+      $('#lab_list').hide();
     });
   });
 </script>
@@ -339,6 +399,23 @@
     $('#region_07').click(function() {
       region_center = new google.maps.LatLng(lat[6], lng[6]);
       secondCall(region_center, 11);
+    });
+  });
+</script>
+
+<script>
+  $(function() {
+    $('#detail').click(function() {
+      var win = window.open('https://www.google.co.kr/maps/dir/'
+                             +ori_G+','+ori_K
+                             +'/'
+                             +des_G+','+des_K
+                             +'/@'
+                             +$('#pos_lat')
+                             +','
+                             +$('#pos_lng')
+                             +',15z?hl=ko');
+      win.focus();
     });
   });
 </script>
@@ -464,8 +541,27 @@
     <table style="width:100%;">
       <tr>
         <td class="td_bottom">
-          <div>
+          <div id="directions">
             <p style="font-size:15px;padding-top:10px;padding-bottom:10px;">길찾기</p>
+          </div>
+        </td>
+      </tr>
+    </table>
+    <table id="direction_input" style="width:100%; position:relative; display:none;">
+      <tr>
+        <td class="td_bottom">
+          <div>
+            <label for="start">출발지</label>
+            <input type="text" id="start" placeholder="마커 왼쪽 클릭" style="color:black;"><br><br>
+            <input type="hidden" id="hidden_start" name="hidden_start">
+            <label for="end">도착지</label>
+            <input type="text" id="end" placeholder="마커 오른쪽 클릭" style="color:black;"><br><br>
+            <input type="hidden" id="hidden_end" name="hidden_end">
+            <span onclick="calcRoute()" style="cursor:pointer;">길찾기!</span>&nbsp;&nbsp;&nbsp;
+            <span onclick="deleteRoute()" style="cursor:pointer;">지우기</span><br><br>
+            <p id="detail" style="cursor:pointer;">자세히 보기</p>
+            <input type="hidden" id="pos_lat" name="pos_lat">
+            <input type="hidden" id="pos_lng" name="pos_lng">
           </div>
         </td>
       </tr>
@@ -473,7 +569,5 @@
   </div>
 </div>
 
-<input type="hidden" id="pos_lat">
-<input type="hidden" id="pos_lng">
 <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
-  <div id="map" style="width:100%; height:100%;"></div>
+<div id="map" style="width:100%; height:100%;"></div>
