--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -28,7 +28,7 @@
                    '<%= x.address %>',
                    {lat:<%= x.position_lat %>, lng:<%= x.position_lng %>}, 
                    <%= x.id %>,
-                   <%= x.review_point %>,
+                   <%= x.avg_point %>,
                    '<%= x.region_code %>']);
   <% end %>
 </script>
@@ -59,7 +59,7 @@
       mapTypeId: google.maps.MapTypeId.ROADMAP
     };
     map = new google.maps.Map(document.getElementById('map'), mapProp);
-    directionsDisplay.setMap(map);
+    //directionsDisplay.setMap(map);
     
    if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
@@ -117,7 +117,7 @@
 <script>//길찾기
   function calcRoute() {
     //directionsDisplay = new google.maps.DirectionsRenderer();
-    //directionsDisplay.setMap(map);
+    directionsDisplay.setMap(map);
     var start = document.getElementById("hidden_start").value;
     var end = document.getElementById("hidden_end").value;
     var request = {
@@ -423,9 +423,9 @@
 <div class="map_drawer" id="map_drawer">
   <div style="padding-top:50px;">
     <div style="padding-bottom:10px; border-bottom: 3px solid;">
-      <h5 style="color:#FF007F">시험장찾기</h5>
+      <h5 style="color:white">시험장찾기</h5>
     </div>
-    <div style="height: 5px; border-bottom: 2px dashed; margin-bottom: 10px;">
+    <div style="height: 5px; border-bottom: 2px double; margin-bottom: 10px;">
     </div>
     <table style="width:100%">
       <tr>
@@ -571,3 +571,19 @@
 
 <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
 <div id="map" style="width:100%; height:100%;"></div>
+
+<script>
+  $(function() {
+    $('#help1').show('drop',1500);
+    $('#help1').click(function() {
+      $('#help1').hide();
+      $('#help2').show('drop',500);
+    });
+    $('#help2').click(function() {
+      $(this).hide();
+    });
+  });
+</script>
+
+<div class="help" id="help1" style="top:100px; left:80px;"><p>지도 메뉴를 볼 수 있습니다.<p></div>
+<div class="help" id="help2" style="top:150px; left:80px;">도움말2</div>
