--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="logo.jpg">
+  <link rel="icon" href="/logo.jpg">
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -48,7 +48,7 @@
     <div class="col-sm-2 col-md-2"></div>
     <div class="col-xs-6 col-sm-8 col-md-8">
       <center>
-        <a href='/' style="text-decoration:none; color:black;">
+        <a href='/home/index2' style="text-decoration:none; color:black;">
           <b><h4><span style="color:red;">TO</span>map</h4></b>
         </a>
       </center>
@@ -96,7 +96,7 @@
                                  box-shadow: inset 0px 0px 10px #bdbdbd;">
     <center style="padding-top:100px;">
       <div class="convert" id="convert">
-        <a href="/" style="text-decoration:none; color:black;">
+        <a href="/home/index2" style="text-decoration:none; color:black;">
           <div class="nav_icon_map" id="map_menu" style="height:60px;">
             <img src="https://cdn2.iconfinder.com/data/icons/flat-ui-icons-24-px/24/location-24-32.png">
             <p style="padding-top:5px;"><b>MAP</b></p>
