--- a/app/views/home/index2.html.erb
+++ b/app/views/home/index2.html.erb
@@ -16,7 +16,7 @@
 <script>//현재위치 아이콘 변수 만들기
   var cur_img = ['b01','b02','b03','b04','b05','b06','b07','b08','b09','b10',
                  'g01','g02','g03','g04','g05','g06','g07','g08','g09','g10'];
-  var img = 'current/' + cur_img[Math.floor(Math.random() * cur_img.length)] + '.png';
+  var img = '/current/' + cur_img[Math.floor(Math.random() * cur_img.length)] + '.png';
 </script>
 
 
@@ -160,7 +160,7 @@
         position: lab_data[i][2],
         title: lab_data[i][0],
         address: lab_data[i][1],
-        icon: 'map_marker32.png',
+        icon: '/map_marker32.png',
         animation: google.maps.Animation.DROP
       }));
     }
@@ -444,7 +444,8 @@
         </td>
       </tr>
     </table>
-    <table style="width:100%;">
+    </table>
+    <table style="width:100%">
       <tr>
         <td class="td_bottom">
           <div class="near_by" id="near_by">
@@ -588,84 +589,3 @@
 
 <!-- 지도 div 입니다 id 말고 다 건드려도 됨-->
 <div id="map" style="width:100%; height:100%;"></div>
-
-
-<% if user_signed_in? %>
-  <div class="login_alert" id="login_alert">
-    <div>
-      <p>안녕하세요!<br><%= current_user.nickname %> 님!</p>
-    </div>
-  </div>
-  <script>
-    $(function() {
-      $('#login_alert').show('blind', 500);
-      setTimeout(function() {
-        $("#login_alert").hide('blind', 500) }, 3000);
-    });
-  </script>
-<% else %>
-  <script>
-    $(function() {
-      $('#help1').show('drop',1000);
-      $('#review_help').show('drop',1000);
-      $('#review_help').click(function() {
-        $(this).remove();
-      });
-      $('#help1').click(function() {
-        $(this).remove();
-      });
-      $('#help2').click(function() {
-        $(this).remove();
-      });
-      $('#help3').click(function() {
-        $(this).remove();
-      });
-      $('#help4').click(function() {
-        $(this).remove();
-      });
-      $('#map_menu').click(function() {
-        $('#help1').remove();
-        $('#review_help').remove();
-        $('#help2').show('drop', 1000);
-        $('#help3').show('drop', 1000);
-        $('#help4').show('drop', 1000);
-      });
-      $('#near_by').click(function() {
-        $('#help2').remove();
-      });
-      $('#lab_list_button').click(function() {
-        $('#help3').remove();
-      });
-      $('#directions').click(function() {
-        $('#help4').remove();
-      });
-    });
-  </script>
-<% end %>
-<center>
-  <div class="help" id="help1" style="top:110px; left:80px;">
-    <div class="help_table">
-      <p class="help_table_cell">지도 메뉴를<br>볼 수 있습니다.</p>
-    </div>
-  </div>
-  <div class="help" id="review_help" style="top:190px; left:80px;">
-    <div class="help_table">
-      <p class="help_table_cell">시험장 리뷰 페이지로<br>넘어갑니다.</p>
-    </div>
-  </div>
-  <div class="help" id="help2" style="top:160px; left:280px;">
-    <div class="help_table">
-      <p class="help_table_cell">가까운 시험장을 찾고<br>주변 지도를 볼 수 있습니다.</p>
-    </div>
-  </div>
-  <div class="help" id="help3" style="top:230px; left:280px;">
-    <div class="help_table">
-      <p class="help_table_cell">지역별 시험장을<br>보여줍니다.</p>
-    </div>
-  </div>
-  <div class="help" id="help4" style="top:300px; left:280px;">
-    <div class="help_table">
-      <p class="help_table_cell">마커를 클릭해 시험장 까지<br>길을 찾을 수 있습니다.</p>
-    </div>
-  </div>
-</center>
