--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -111,99 +111,155 @@ $('[data-toggle=collapse]').click(function(){
   <!--메인페이지인 경우-->
   <%if params[:id].nil?%>
     <div class="col-md-7">
-      <p>전국 핫플레이스</p>
+      <p>전국 핫플레이스 TOP12</p>
+      <form action="/home/labreview_write">
+        <button type="submit" class="btn btn-default">후기 작성</button>
+      </form>
       <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@testcenter.sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
-        <div class="col-md-4" style="margin-bottom:20px">
+        <%@rank=1%>
+        <%@testcenter.sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
           <div class="thumbnail">
             <img src="..." alt="...">
             <div class="caption">
-              <h4>1위</h4>
+              <h4><%=@rank%>위</h4>
               <p><%=y.name%></p>
               <p>평점:<%=y.avg_point%></p>
             </div>
           </div>
         </div>
+        <%@rank+=1%>
         <%end%>
       </div><br><br>
       
-      <div class="row"> 
-        <div class="col-md-12">
-          <div class="input-group" style="width: 70%; margin:auto;">
-            <div class="input-group-btn">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">지역 <span class="caret"></span></button>
-              <ul class="dropdown-menu">
-                <li><a href="#">서울/경기</a></li>
-                <li><a href="#">인천</a></li>
-                <li><a href="#">충청도</a></li>
-              </ul>
+      <p>서울/경기 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"01").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
             </div>
-            <!-- /btn-group -->
-            <input type="text" class="form-control" aria-label="...">
           </div>
         </div>
-        
-      </div>      
-      <p>전체보기</p>
+        <%@rank+=1%>
+        <%end%>
+      </div>
       
-      <div class="panel panel-default">
-          <!-- Table -->
-          <table class="table table-striped table-condensed">
-              <col style="width:10%">
-              <col style="width:20%">
-              <col style="width:40%">
-              <col style="width:10%">
-              <col style="width:10%">
-              <col style="width:10%">
-            <thead>
-              <tr>
-                <th style="text-align:center">번호</th>
-                <th style="text-align:center">고사장</th>
-                <th style="text-align:center">제목</th>
-                <th style="text-align:center">작성자</th>
-                <th style="text-align:center">조회수</th>
-                <th style="text-align:center">추천수</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @allarticle.reverse.each do |x|%>
-              <tr data-toggle="modal" data-target="#<%=x.id%>">
-                  <td style="text-align:center"><%=x.id%></td>
-                  <td style="text-align:center"><%=x.testcenter%></td>
-                  <td style="text-align:center"><%=x.title%></td>
-                  <td style="text-align:center">김새봄</td>
-                  <td style="text-align:center">100</td>
-                  <td style="text-align:center">12</td>
-              </tr>
-              <div class="modal fade" id="<%=x.id%>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                <br><br>
-                <div class="modal-dialog modal-lg" role="document">
-                  <div class="modal-content">
-                    <div class="modal-header">
-                      <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                      <h4 class="modal-title" id="myModalLabel"><%=x.title%></h4><a>평점,조회수,추천수,작성시간 등등 </a>
-                    </div>
-                    <div class="modal-body">
-                      <%=x.content%>
-                      <form action="" method="POST" class="form-inline">
-                        <input type="text" class="form-control" style="width:90%" placeholder="댓글달기">
-                      <input type="submit" value="댓글달기">
-                      </form>
-                    </div>
-                    <div class="modal-footer">
-                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <%end%>
-              
-            </tbody>
-          </table>
+      <p>인천 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"02").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
         </div>
-        <form action="/home/labreview_write">
-            <button type="submit" class="btn btn-default">후기 작성</button>
-        </form>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      
+      <p>충청도 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"03").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
+        </div>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      
+      <p>경상도 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"04").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
+        </div>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      
+      <p>전라도 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"05").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
+        </div>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      
+      <p>강원도 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"06").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
+        </div>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      
+      <p>제주도 순위</p>
+      <div class="row" style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>"07").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+        <div class="col-md-3" style="margin-bottom:20px">
+          <div class="thumbnail">
+            <img src="..." alt="...">
+            <div class="caption">
+              <h4><%=@rank%>위</h4>
+              <p><%=y.name%></p>
+              <p>평점:<%=y.avg_point%></p>
+            </div>
+          </div>
+        </div>
+        <%@rank+=1%>
+        <%end%>
+      </div>
+          
+      
+        
     </div>
     
   </div>
