--- a/app/views/home/labreview.html.erb
+++ b/app/views/home/labreview.html.erb
@@ -1,3 +1,4 @@
+<%region={"01"=>"서울/경기","02"=>"인천","03"=>"충청도","04"=>"경상도","05"=>"전라도","06"=>"강원도","07"=>"제주도"}%>
 <script>
 $(".alert").addClass("in").fadeOut(4500);
 
@@ -25,86 +26,16 @@ $('[data-toggle=collapse]').click(function(){
   <div class="col-md-2 col-md-offset-1" style="border-right: 1px solid #BDBDBD;">
       <ul class="nav nav-stacked" id="list_deco">
           <li role="nav-header"><a href="/home/labreview"><b>시험장 전체보기</b></a></li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#userMenu">서울/경기 <i class="glyphicon glyphicon-chevron-right"></i></a>
-              <!--in은 페이지가 열렸을때 펼쳐졌는지 여부-->
-              <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>"01").include? @testcenter.find(params[:id])) %>in<%end%>" id="userMenu">
-                <%@testcenter.where(:region_code=>"01").each do |x|%>
-                  <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
-                <%end%>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu2">인천<i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>"02").include? @testcenter.find(params[:id])) %>in<%end%>" id="menu2">
-                <%@testcenter.where(:region_code=>"02").each do |x|%>
-                  <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
-                <%end%>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu3">충청도<i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>"03").include? @testcenter.find(params[:id])) %>in<%end%>" id="menu3">
-                <%@testcenter.where(:region_code=>"03").each do |x|%>
-                  <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
-                <%end%>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu4">경상도 <i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse" id="menu4">
-                  <li><a href="#">Information &amp; Stats</a>
-                  </li>
-                  <li><a href="#">Views</a>
-                  </li>
-                  <li><a href="#">Requests</a>
-                  </li>
-                  <li><a href="#">Timetable</a>
-                  </li>
-                  <li><a href="#">Alerts</a>
-                  </li>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu5">전라도 <i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse" id="menu5">
-                  <li><a href="#">Information &amp; Stats</a>
-                  </li>
-                  <li><a href="#">Views</a>
-                  </li>
-                  <li><a href="#">Requests</a>
-                  </li>
-                  <li><a href="#">Timetable</a>
-                  </li>
-                  <li><a href="#">Alerts</a>
-                  </li>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu6">강원도<i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse" id="menu6">
-                  <li><a href="#">Information &amp; Stats</a>
-                  </li>
-                  <li><a href="#">Views</a>
-                  </li>
-                  <li><a href="#">Requests</a>
-                  </li>
-                  <li><a href="#">Timetable</a>
-                  </li>
-                  <li><a href="#">Alerts</a>
-                  </li>
-              </ul>
-          </li>
-          <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#menu7">제주도<i class="glyphicon glyphicon-chevron-right"></i></a>
-              <ul class="nav nav-stacked collapse" id="menu7">
-                  <li><a href="#">Information &amp; Stats</a>
-                  </li>
-                  <li><a href="#">Views</a>
-                  </li>
-                  <li><a href="#">Requests</a>
-                  </li>
-                  <li><a href="#">Timetable</a>
-                  </li>
-                  <li><a href="#">Alerts</a>
-                  </li>
-              </ul>
-          </li>
-          <li style="height: 200px;">
-          </li>
+          <%region.each do |region_code,region_name|%>
+            <li class="nav-header"> <a href="#" data-toggle="collapse" data-target="#<%=region_code%>"><%=region_name%> <i class="glyphicon glyphicon-chevron-right"></i></a>
+                <!--in은 페이지가 열렸을때 펼쳐졌는지 여부-->
+                <ul class="nav nav-stacked collapse <%if params[:id] != nil && (@testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id])) %>in<%end%>" id="<%=region_code%>">
+                  <%@testcenter.where(:region_code=>region_code).each do |x|%>
+                    <li role="presentation"><a href="/home/labreview/<%=x.id%>" style="padding-left:40px"><%=x.name%></a></li>
+                  <%end%>
+                </ul>
+            </li>
+          <%end%>
       </ul>
       <hr>  
   </div>
@@ -131,137 +62,20 @@ $('[data-toggle=collapse]').click(function(){
         <%@rank+=1%>
         <%end%>
       </div><br><br>
-      
-      <p>서울/경기 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"01").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>인천 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"02").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>충청도 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"03").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>경상도 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"04").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>전라도 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"05").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>강원도 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"06").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-      
-      <p>제주도 순위</p>
-      <div class="row" style="border-bottom: 1px solid #BDBDBD">
-        <%@rank=1%>
-        <%@testcenter.where(:region_code=>"07").sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
-        <div class="col-md-3" style="margin-bottom:20px">
-          <div class="thumbnail">
-            <img src="..." alt="...">
-            <div class="caption">
-              <h4><%=@rank%>위</h4>
-              <p><%=y.name%></p>
-              <p>평점:<%=y.avg_point%></p>
-            </div>
-          </div>
-        </div>
-        <%@rank+=1%>
-        <%end%>
-      </div>
-          
-      
-        
     </div>
-    
+  <div class="col-md-2">
+      
+      <%region.each do |region_code,region_name|%>
+      <p><%=region_name%> 순위</p>
+      <div style="border-bottom: 1px solid #BDBDBD">
+        <%@rank=1%>
+        <%@testcenter.where(:region_code=>region_code).sort_by{|x| x[:avg_point]}.reverse.take(12).each do |y|%>
+          <p><%=@rank%>위 : <%=y.name%>(<%=y.avg_point%>점) <a href="/home/labreview/<%=y.id%>">자세히 보기</a></p>
+          
+        <%@rank+=1%>
+        <%end%>
+      </div>
+      <%end%>
   </div>
 
 
@@ -323,56 +137,26 @@ $('[data-toggle=collapse]').click(function(){
         <div id="map" style="width:400px; height:300px;"></div>
       
       </div>
-      <%if params[:id] != nil && (@testcenter.where(:region_code=>"01").include? @testcenter.find(params[:id])) %>
-          <div class="col-md-4">
-            <p>서울/경기 핫 플레이스</p>
-            <%@ranking=1%>
-            <%@testcenter.where(:region_code => "01").sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
-            <div style="border:1px solid black;height:120px">
-              <div>
-                <h4><%=@ranking%>위</h4>
-                <p><%=y.name%></p>
-                <p>평점:<%=y.avg_point%></p>
-                <p><a href="/home/labreview/<%=y.id%>">바로가기</a></p>
+      <%region.each do |region_code,region_name| %>
+        <%if @testcenter.where(:region_code=>region_code).include? @testcenter.find(params[:id]) %>
+            <div class="col-md-4">
+              <p><%=region_name%> 핫 플레이스</p>
+              <%@ranking=1%>
+              <%@testcenter.where(:region_code => region_code).sort_by{|x| x[:avg_point]}.reverse.take(3).each do |y|%>
+              <div style="border:1px solid black;height:120px">
+                <div>
+                  <h4><%=@ranking%>위</h4>
+                  <p><%=y.name%></p>
+                  <p>평점:<%=y.avg_point%></p>
+                  <p><a href="/home/labreview/<%=y.id%>">바로가기</a></p>
+                </div>
               </div>
+              <%@ranking+=1%>
+              <%end%>
             </div>
-            <%@ranking+=1%>
-            <%end%>
-          </div>
-          
-      <%elsif params[:id] != nil && (@testcenter.where(:region_code=>"02").include? @testcenter.find(params[:id])) %>
-          <p>인천 핫 플레이스</p>
-          <%@testcenter.where(:region_code => "02").sort{|x| x.avg_point}.reverse.take(3).reverse.each do |y|%>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <img src="..." alt="...">
-              <div class="caption">
-                <h4>1위</h4>
-                <p><%=y.name%></p>
-                <p>평점:<%=y.avg_point%></p>
-                <p><a href="#" class="btn btn-default" role="button">Button</a></p>
-              </div>
-            </div>
-          </div>
-          <%end%>
-      <%elsif params[:id] != nil && (@testcenter.where(:region_code=>"03").include? @testcenter.find(params[:id])) %>
-          <p>충청도 핫 플레이스</p>
-          <%@testcenter.where(:region_code => "03").sort{|x| x.avg_point}.reverse.take(3).reverse.each do |y|%>
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <img src="..." alt="...">
-              <div class="caption">
-                <h4>1위</h4>
-                <p><%=y.name%></p>
-                <p>평점:<%=y.avg_point%></p>
-                <p><a href="#" class="btn btn-default" role="button">Button</a></p>
-              </div>
-            </div>
-          </div>
-          <%end%>
+        <%end%> 
       <%end%>
     </div>
-    
     <p><%=@testcenter.find(params[:id]).name%>게시판입니다</p>
     <div class="panel panel-default">
         <!-- Table -->
@@ -436,4 +220,3 @@ $('[data-toggle=collapse]').click(function(){
  
 </div>
 <%end%>
-
